--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     		<li class="fp"><a href="https://wiki.math.ntnu.no/tma4115/2015v/plan">Forelesningsplan</a></li>
     		<li class="ov"><a href="https://wiki.math.ntnu.no/tma4115/2015v/exercises">Øvingsoppgaver</a></li>
         <li class="bok"><a href="https://www.google.no/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#newwindow=1&safe=off&q=david+C.+Lay+linear+algebra+and+its+applications+.pdf&spell=1">Boka</a></li>
-    		<li class="lf"><a href="https://drive.google.com/folderview?id=0B2jvtLRtHjFhSVh1djZTczJTZmc&amp;usp=sharing"><b>LF</b> til Lay</a></li>
+    		<li class="lf"><a href="http://www.kokekunster.no/arkiv/2.Semester/TMA4115%20-%20Matte%203/Løsningsforslag%20til%20Lay/"><b>LF</b> til Lay</a></li>
     		<li class="eks"><a href="https://wiki.math.ntnu.no/tma4110/2012h/examproblems">Eksamenssett (med <b>LF</b>)</a></li>
     	</ul>
 </article>
