Fikser ampersand feil i link-encoding

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     	<ul>
     		<li class="fp"><a href="https://wiki.math.ntnu.no/tma4115/2015v/plan">Forelesningsplan</a></li>
     		<li class="ov"><a href="https://wiki.math.ntnu.no/tma4115/2015v/exercises">Øvingsoppgaver</a></li>
-        <li class="bok"><a href="https://www.google.no/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#newwindow=1&safe=off&q=david+C.+Lay+linear+algebra+and+its+applications+.pdf&spell=1">Boka</a></li>
+        <li class="bok"><a href="https://www.google.no/webhp?sourceid=chrome-instant&ampion=1&ampespv=2&ampie=UTF-8#newwindow=1&ampsafe=off&ampq=david+C.+Lay+linear+algebra+and+its+applications+.pdf&ampspell=1">Boka</a></li>
     		<li class="lf"><a href="http://www.kokekunster.no/arkiv/2.Semester/TMA4115%20-%20Matte%203/Løsningsforslag%20til%20Lay/"><b>LF</b> til Lay</a></li>
     		<li class="eks"><a href="https://wiki.math.ntnu.no/tma4110/2012h/examproblems">Eksamenssett (med <b>LF</b>)</a></li>
     	</ul>
