--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <li class="epost"><a href="https://webmail.stud.ntnu.no/">Studentepost</a></li>
             <li class="software"><a href="https://software.ntnu.no/">Programvare</a></li>
             <li class="farm"><a href="https://farm.ntnu.no/RDWeb/Pages/en-US/login.aspx?ReturnUrl=/RDWeb/Pages/en-US/Default.aspx">Programfarm</a></li>
-            <li class="ibok"><a href="https://ibok.no/">Bruktbøker #1</a><a href="https://www.facebook.com/groups/274516045996844/?fref=ts"> #2</a></li>
+            <li class="ibok"><a href="https://ibok.no/">Bruktbøker #1</a></li>
+            <li class="ibok"><a class="dobbel" href="https://www.facebook.com/groups/274516045996844/?fref=ts">Bruktbøker #2</a></li>
         </ul>
 </article>
 
