Repeterer siste commit for 1semester.html

--- a/1semester.html
+++ b/1semester.html
@@ -139,7 +139,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <li class="epost"><a href="https://webmail.stud.ntnu.no/">Studentepost</a></li>
             <li class="software"><a href="https://software.ntnu.no/">Programvare</a></li>
             <li class="farm"><a href="https://farm.ntnu.no/RDWeb/Pages/en-US/login.aspx?ReturnUrl=/RDWeb/Pages/en-US/Default.aspx">Programfarm</a></li>
-            <li class="ibok"><a href="https://ibok.no/">Bruktbøker #1</a><a href="https://www.facebook.com/groups/274516045996844/?fref=ts"> #2</a></li>
+            <li class="ibok"><a href="https://ibok.no/">iBok.no</a></li>
         </ul>
 </article>
 
@@ -147,7 +147,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <img src="img/nabla.svg" alt="Nabla" class="desaturate">
     <h2>Fritid</h2>
         <ul>
-            <li class="nabla"><a href="http://nabla.no/">Nablas hjemmesider</a></li>
             <li class="fb"><a href="https://www.facebook.com/groups/2248934869/?fref=ts">FYSMATs Facebook-gruppe</a></li>
             <li class="middag"><a href="https://www.sit.no/en/middag/realfag">Realfagskantina</a></li>
             <li class="bartebuss"><a href="http://bartebuss.no/">Bartebuss</a></li>
