Fikser hovereffekt for arkiv i nav

--- a/1semester.html
+++ b/1semester.html
@@ -84,7 +84,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <ul>
       <li><a href="1semester.html"><b>1. Semester</b></a></li>
       <li><a href="index.html">2. Semester</a></li>
-      <li class="arkiv"><img src="img/storfile98.svg" alt="arkiv"><a href="http://kokekunster.no/arkiv/1.Semester">Arkiv</a></li>
+      <li class="arkiv"><a href="http://kokekunster.no/arkiv/1.Semester"><img src="img/storfile98.svg" alt="arkiv">  Arkiv</a></li>
     </ul>
   </div>
     </nav>
