--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <ul>
         <li><a href="1semester.html">1. Semester</a></li>
         <li><a href="index.html"><b>2. Semester</b></a></li>
-        <li class="arkiv"><a href="http://kokekunster.no/arkiv/2.Semester/"><img src="img/storfile98.svg" alt="arkiv">  Arkiv</a></li>
+        <li class="arkiv"><a href="/arkiv/2.Semester/"><img src="img/storfile98.svg" alt="arkiv">  Arkiv</a></li>
       </ul>
     </div>
   </nav>
