Renaming all images after convention and deleting unused images

--- a/arkiv/_h5ai.headers.html
+++ b/arkiv/_h5ai.headers.html
@@ -3,7 +3,7 @@
 
 <header>
 	<div class="wrap">
-    	<a href="http://kokekunster.no/"><img src="/img/litencooking15.svg" alt="logo" class="logo"></a>
+    	<a href="http://kokekunster.no/"><img src="/img/litenkokekunster_logo.svg" alt="logo" class="logo"></a>
 		<h1>KOKE<span class="thin">kunster</span></h1>
 	</div>
 </header>
