--- a/arkiv/_h5ai.headers.html
+++ b/arkiv/_h5ai.headers.html
@@ -3,7 +3,7 @@
 
 <header>
 	<script src="/scripts/javascript.js"></script>
-	<a href="http://kokekunster.no/">
+	<a href="/index.php">
 	<div class="wrap">
 		<svg alt="logo" class="logo" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 			 width="60px" height="60px" viewBox="0 0 375.028 375.028" style="enable-background:new 0 0 375.028 375.028;"
